feat: use audio engine

--- a/live-demo/Info.plist
+++ b/live-demo/Info.plist
@@ -27,6 +27,9 @@
 		</dict>
 	</dict>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>audio</string>
+		<string>voip</string>
+	</array>
 </dict>
 </plist>
