--- a/Example/live-demo/Info.plist
+++ b/Example/live-demo/Info.plist
@@ -31,5 +31,10 @@
 		<string>audio</string>
 		<string>voip</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
